lavf/movenc: Allow to disable writing the timecode track.

Fixes ticket #5492.